--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-image-lightbox",
+  "name": "react-image-lightbox-custom",
   "version": "5.1.0",
-  "description": "A lightbox component for React.js",
+  "description": "A lightbox component for React.js with support custom content",
   "scripts": {
     "build": "rollup -c",
     "build:demo": "parcel build examples/cats/index.html --out-dir build --public-url ./",
@@ -26,12 +26,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/frontend-collective/react-image-lightbox.git"
+    "url": "https://github.com/linkinkov/react-image-lightbox.git"
   },
-  "homepage": "https://frontend-collective.github.io/react-image-lightbox",
-  "bugs": "https://github.com/frontend-collective/react-image-lightbox/issues",
+  "homepage": "https://github.com/linkinkov/react-image-lightbox",
+  "bugs": "https://github.com/linkinkov/react-image-lightbox/issues",
   "authors": [
-    "Chris Fritz"
+    "Chris Fritz",
+    "linkinkov"
   ],
   "license": "MIT",
   "jest": {
